--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -18,14 +18,21 @@ li {
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 
-.rpk-container {
-  max-width: 1600px;
-  margin: auto;
-}
-.red {
-  background-color: red;
-}
 
-html {
-  background-color: aqua;
+body {
+  background: linear-gradient(174deg, #FFAF64 4.63%, #EB00FF 95.61%) no-repeat;
+  height: 100vh;
+  width: 100%;
+}    
+
+.btn-container {
+  display: flex;
+  justify-items: end;
+
+  .reg-btn {
+    padding: 5px 7px 5px 7px;
+    background-color: rgb(53, 53, 208);
+    border-radius: 10px;
+    color: white;
+  }
 }
