--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -107,10 +107,11 @@
                             aria-label="Закрыть"></button>
                 </div>
                 <div class="modal-body">
-                    <form method="POST" action="edit/">
+                    <form method="POST" action="edit_user/">
                         {% csrf_token %}
-                        <input type="hidden" id="editingEmail">
                         <div class="mb-3">
+                            <input type="hidden" id="editingEmail" name="editingEmail" value="">
+
                             <label for="editName" class="form-label">Имя</label>
                             <input type="text"
                                    class="form-control"
@@ -131,13 +132,6 @@
                                    id="editEmail"
                                    value="{{ user.email }}">
                         </div>
-                        <div class="mb-3">
-                            <label for="editPassword" class="form-label">Пароль</label>
-                            <input type="password"
-                                   class="form-control"
-                                   id="editPassword"
-                                   value="{{ user.password }}">
-                        </div>
                         <div class="modal-footer">
                             <button type="button"
                                     class="btn btn-secondary text-black"
@@ -155,7 +149,7 @@
     <nav class="contaiter mx-auto p-8 w-full flex flex-row items-center">
         <div class="w-1/3">
             <h1 class="font-bold text-xl text-white">Филиппова Екатерина ПИ21-7</h1>
-            <h2 class="text-white">Тема: "t-7"</h2>
+            <h2 class="text-white">Тема: "t-8 (Сохранение в БД)"</h2>
         </div>
         <div class="w-2/3"></div>
         <div class="btn-container w-1/5 flex flex-row justify-items-end text-center">
@@ -188,10 +182,11 @@
                             <th>{{ user.lastname }}</th>
                             <th>{{ user.email }}</th>
                             <th>
-                                <a href="edit/{{ user.id }}"
-                                   class="btn btn-success"
+                                <a href="edit_user/{{ user.id }}"
+                                   class="btn btn-success edit-btn"
                                    data-bs-toggle="modal"
-                                   data-bs-target="#editModal">Изменить</a>
+                                   data-bs-target="#editModal"
+                                   data-user-id="{{ user.id }}">Изменить</a>
                             </th>
                             <th>
                                 <a href="delete/{{ user.id }}"class="btn btn-danger">Удалить</a>
@@ -203,3 +198,5 @@
         </div>
     </div>
 {% endblock %}
+
+
