--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9281,18 +9281,14 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important; } }
 
-body {
-  background: linear-gradient(174deg, #FFAF64 4.63%, #EB00FF 95.61%) no-repeat;
-  height: 100vh;
-  width: 100%; }
+.rpk-container {
+  max-width: 1600px;
+  margin: auto; }
 
-.btn-container {
-  display: flex;
-  justify-items: end; }
-  .btn-container .reg-btn {
-    padding: 5px 7px 5px 7px;
-    background-color: #3535d0;
-    border-radius: 10px;
-    color: white; }
+.red {
+  background-color: red; }
+
+html {
+  background-color: aqua; }
 
 /*# sourceMappingURL=styles.css.map */
