add index, registration, login pages

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,6 +7,7 @@
           content="width=device-width" />
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{% sass_src "styles.scss" %}" type="text/css" media="all">
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     {% block content %}{% endblock %}
