--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,8 +1,23 @@
 {% extends "main/base.html" %}
+{% load static %}
+
 
 {% block content %}
 
 {% include "main/includes/header.html" %}
+
+<div class="flex w-full flex-col md:flex-row p-4">
+    <div class="flex flex-col w-full md:w-1/2">
+        <h1 class="title uppercase mb-7">ПАРАЦЕЛЬС</h1>
+        <p class="sub-text text-white mb-7">Равным образом дальнейшее развитие различных форм деятельности требуют от нас анализа новых предложений. Рамки и место обучения кадров в значительной степени обуславливает создание модели развития.</p>
+        <div class="flex w-1/2">
+            <a href="{% url "main:registration" %}"class="join-btn text-white px-4 py-2 rounded-md drop-shadow-md font-medium">Присоединиться</a>
+        </div>
+    </div>
+    <div class="flex w-full md:w-1/2 justify-center place-items-center">
+        <img src="{% static "img/main.png" %}" alt="">
+    </div>
+</div>
 
 
 {% endblock %}
