--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -30,6 +30,10 @@ body {
   background-color: #BFDBD6;
 }
 
+html {
+  background-color: #BFDBD6;
+}
+
 .title {
   font-size: 1.625rem;
   font-style: normal;
@@ -63,4 +67,8 @@ body {
   font-size: 1rem;
   font-weight: 500;
   text-transform: capitalize;
+}
+
+.note-modal {
+  margin-top: 64vh;
 }
