Added Models and Login (beta for now until we talk it through)

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -16,6 +16,7 @@ li {
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+// @import '../../../node_modules/bootstrap/scss/bootstrap';
 
 
 .rpk-container {
