--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Register</title>
 </head>
 <body>
-$END$
+<form role="form" method="post">
+
+    {% csrf_token %}
+
+    <div>
+        {{ form.username }}
+    </div>
+    <span class="text-error">{{ form.username.errors }}</span>
+
+    <div>
+        {{ form.email }}
+    </div>
+    <span class="text-error">{{ form.email.errors }}</span>
+
+    <div>
+        {{ form.password1 }}
+    </div>
+    <span class="text-error">{{ form.password1.errors }}</span>
+
+    <div>
+        {{ form.password2 }}
+    </div>
+    <span class="text-error">{{ form.password2.errors }}</span>
+
+    <button type="submit" name="register">Register</button>
+
+</form>
 </body>
 </html>
