--- a/main/templates/main/test_login.html
+++ b/main/templates/main/test_login.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<form method="post">
+  {% csrf_token %}
+  {{ user_form.as_p }}
+  {{ page_form.as_p }}
+  <button type="submit">Save changes</button>
+</form>
 </body>
 </html>
