Added forms to pages and authentication for calendar

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -14,9 +14,10 @@ ul,
 li {
   font-family: "Jetbrains";
 }
-
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-// @import '../../../node_modules/bootstrap/scss/bootstrap';
+// katya
+//@import "../node_modules/bootstrap/scss/bootstrap.scss";
+// elya
+@import 'node_modules/node_modules/bootstrap/scss/bootstrap';
 
 
 .rpk-container {
