changed styles scss back to Ekatfil settings

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -15,9 +15,9 @@ li {
   font-family: "Jetbrains";
 }
 // katya
-//@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
 // elya
-@import 'node_modules/node_modules/bootstrap/scss/bootstrap';
+// @import 'node_modules/node_modules/bootstrap/scss/bootstrap';
 
 
 .rpk-container {
