--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -17,6 +17,8 @@
   <body>
     {% include "main/includes/header.html" %}
     {% include "main/includes/modal-create-note.html" %}
+    {% include "main/includes/modal-user-notes.html" %}
     {% block content %}{% endblock %}
+    
   </body>
 </html>
