highlight current day in calendar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9331,4 +9331,7 @@ html {
 .visible {
   display: block !important; }
 
+.cell.today {
+  background-color: #C1D8ED; }
+
 /*# sourceMappingURL=styles.css.map */
