--- a/main/templates/main/includes/modal-create-group.html
+++ b/main/templates/main/includes/modal-create-group.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div id="createnoteModal" class=" note-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
+<div id="creategroupModal" class="group-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
     <div class="modal-content bg-white w-full p-8 rounded-lg max-h-60 lg:max-h-auto overflow-y-auto">
         <span class="close close-create-modal text-gray-500 cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
         <form id="noteForm">
