--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -91,3 +91,42 @@ html {
   }
 }
 
+.doctor-note {
+  background-color: #C1D8ED;
+  border-radius: 2.5rem;
+}
+
+.private-note {
+  background-color: #BFDBD6;
+  border-radius: 2.5rem;
+}
+
+.doctor-nav {
+  background: rgba(255, 255, 255, 0.70);
+
+  .doctor-nav-item {
+    border-radius: 3.125rem;
+    background: #C1D8ED;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+}
+
+
+.profile-photo {
+  img {
+    border: 1px solid #FFF;
+  }
+}
+
+.profile-input {
+  border: 1px solid #C1D8ED;
+  background-color: none;
+}
+
+.create-group {
+  border-radius: 0.625rem;
+  border: 2px solid #C1D8ED;
+  background: rgba(255, 255, 255, 0.50);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(2px);
+}
