--- a/main/templates/main/includes/modal-user-notes.html
+++ b/main/templates/main/includes/modal-user-notes.html
@@ -1,16 +1,31 @@
 {% load static %}
 
-<!-- Add this modal structure at the end of your HTML body -->
 <div id="noteModal" class=" note-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
     <div class="modal-content bg-white w-full p-8 rounded-lg max-h-60 lg:max-h-auto overflow-y-auto">
         <span class="close close-notes-modal text-gray-500 cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
-        <!-- Add form elements for selecting time, note type, and entering text -->
         <div>
-            Заметки на день:
+            Заметки на день:  {% comment %} надо вставить дату {% endcomment %}
+        </div>
+
+        <div class="my-4 space-y-2">
+            <div class="flex flex-row w-full">
+                <p class="w-1/3">10:00</p>
+                <div class="private-note w-2/3 p-2 text-white">Анаферон 1 таблетка</div>
+            </div>
+    
+            <div class="flex flex-row w-full">
+                <p class="w-1/3"></p>
+                <div class="doctor-note w-2/3 p-2 text-white">Сильные боли в горле</div>
+            </div>
+    
+            <div class="flex flex-row w-full">
+                <p class="w-1/3"></p>
+                <div class="doctor-note w-2/3 p-2 text-white">Температура 38</div>
+            </div>
         </div>
 
 
-        <div class="text-center my-4">
+        <div class="text-center mt-4">
             <button id="add-note">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70" fill="none">
                 <rect width="70" height="70" rx="35" fill="#687874" fill-opacity="0.9"/>
