--- a/main/templates/main/user-calendar.html
+++ b/main/templates/main/user-calendar.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<div id="vue-calendar">
 <div class="container mx-auto mt-10"> 
     <div class="wrapper bg-white rounded shadow w-full"> 
         <div class="header flex justify-between border-b p-2"> 
@@ -32,7 +32,7 @@
         
     </div> 
 </div> 
-
+</div>
 <script src="{% static "js/calendar.js" %}" charset="utf-8"></script>
 
 {% endblock %}
