--- a/main/templates/main/includes/modal-user-notes.html
+++ b/main/templates/main/includes/modal-user-notes.html
@@ -29,6 +29,7 @@
 
 
         <div class="text-center mt-4">
+        {% if not pacient %}
             <button id="add-note" @click="getDate()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70" fill="none">
                 <rect width="70" height="70" rx="35" fill="#687874" fill-opacity="0.9"/>
@@ -38,6 +39,7 @@
                 <rect x="19" y="33" width="32" height="4" rx="2" fill="white"/>
                 </svg>
             </button>
+            {% endif %}
         </div>
     </div>
 </div>
