--- a/main/templates/main/profile-doctor.html
+++ b/main/templates/main/profile-doctor.html
@@ -6,7 +6,9 @@
 <div class="doctor-nav">
     <div class="container p-2 space-x-8 mx-auto flex flex-row place-content-center">
         <a href="#" class="doctor-nav-item p-2 font-bold">Профиль</a>
-        <a href="{% url "main:patients" %}" class="doctor-nav-item p-2">Пациенты</a>
+        {% if user.profile.is_doctor %}
+        <a href="{% url 'main:patients' %}" class="doctor-nav-item p-2">Пациенты</a>
+        {% endif %}
         <div class="h-8 w-8">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square w-full h-full" viewBox="0 0 16 16">
                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -18,14 +20,24 @@
 
 <div class="container">
     <div class="profile-photo flex place-content-center my-10">
-        <img alt="user photo" class="w-48 h-48 rounded-full object-cover" src="{% static "img/profile-photo-doctor.jpg" %}">
+        <img alt="user photo" class="w-48 h-48 rounded-full object-cover" 
+        src="{% if user.profile.pfp.url %}
+        {{ user.profile.pfp.url }}
+        {% else %}
+        {% static 'img/profile-photo-doctor.jpg' %}
+        {% endif%}">
     </div>
     <div class="user-name flex flex-col space-y-2 text-center place-content-center">
-        <p class="font-bold text-lg">Краснов Борис Михайлович</p>
-        <p class="">врач-гастроэнтеролог</p>
+        <p class="font-bold text-lg">{{ user.last_name }} {{ user.first_name }} {{ user.profile.patronymic}}</p>
+        <p class="">{{ user.profile.profession }}</p>
     </div>
 
     <div class="py-10">
+            {% if user.profile.education %}
+            <b>образовании</b><br>
+            
+            {{ user.profile.education }}<br>
+            {% endif %}
             <b>Диплом об образовании</b>
             <br>1993г. Смоленский государственный медицинский институт. «Педиатрия»
             <br>
