--- a/main/templates/main/includes/modal-user-notes.html
+++ b/main/templates/main/includes/modal-user-notes.html
@@ -5,7 +5,7 @@
         <span class="close close-notes-modal text-gray-500 cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
         <div id="data-date" ref="instance" data-date=""></div>
         <div id="date">
-            Заметки на день:  {% comment %} надо вставить дату {% endcomment %}
+            Заметки на
         </div>
 
         <div class="my-4 space-y-2" id="notes">
