--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: "JetBrains";
-  src: url(/static_root/fonts/JetBrains/JetBrainsMono-Regular.ttf);
-}
-
-a,
-p,
-h1,
-h2,
-h3,
-h4,
-span,
-ul,
-li {
-  font-family: "Jetbrains";
-}
 // katya
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 // elya
@@ -129,4 +113,8 @@ html {
   background: rgba(255, 255, 255, 0.50);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(2px);
+}
+
+.has-notes {
+  background-color: red;
 }
