--- a/main/templates/main/includes/header.html
+++ b/main/templates/main/includes/header.html
@@ -46,6 +46,12 @@
           <a href="{% url "main:user_calendar" %}"
              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Календарь</a>
         </li>
+        {% if user.is_authenticated %}
+            <li>
+                <a href="{% url 'main:logout' %}"
+                   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Выход</a>
+            </li>
+        {% endif %}
       </ul>
     </div>
   </div>
