--- a/main/templates/main/profile-doctor.html
+++ b/main/templates/main/profile-doctor.html
@@ -21,10 +21,10 @@
 <div class="container">
     <div class="profile-photo flex place-content-center my-10">
         <img alt="user photo" class="w-48 h-48 rounded-full object-cover" 
-        src="{% if user.profile.pfp.url %}
-        {{ user.profile.pfp.url }}
+        src="{% if user.profile.url %}
+        {{ user.profile.url }}
         {% else %}
-        {% static 'img/profile-photo-doctor.jpg' %}
+        {% static 'img/default-profile.png' %}
         {% endif %}">
     </div>
     <div class="user-name flex flex-col space-y-2 text-center place-content-center">
@@ -34,26 +34,9 @@
 
     <div class="py-10">
             {% if user.profile.education %}
-            <b>образовании</b><br>
-            
             {{ user.profile.education }}<br>
             {% endif %}
-            <b>Диплом об образовании</b>
-            <br>1993г. Смоленский государственный медицинский институт. «Педиатрия»
-            <br>
-            <br>- Член Российской ассоциации гастроэнтерологов
-            <br>- врач-эндоскопист
-            <br>- лечение и диагностика заболеваний желудочно-кишечного тракта в соответствии с новейшими методиками (гастрит, язва желудка, язва 12-перстной кишки, колит, панкреатит, заболевания печени)
-            <br>проводит эндоскопические исследования желудка (ЭГДС), толстого кишечника (колоноскопия) на современном оборудовании
-            <br>
-            <br><b>Специализация</b>
-            <br>- 1994. Интернатура в Вяземской ЦРБ Смоленской обл. «Педиатрия»
-            <br>- 2008г. Факультет повышения квалификации и профессиональной переподготовки ГОУ ВПО Смоленская гос.мед.академия «Эндоскопия»
-            <br>- 2010г. ГОУ ВПО РГМУ «Гастроэнтерология»
-            <br>
-            <br><b>Усовершенствование, Сертификат</b>
-            <br>- 2013г. ФГБУ ВПО Российский университет дружбы народов, «Эндоскопия»,144час.
-            <br>- 2015г. ИУВ ФГБУ «НМХЦ им.Н.И.Пирогова» Минздрава России. «Гастроэнтерология», 144 час.
+            Дополнительная информация не указана
     </div>
 </div>
     
