--- a/main/templates/main/includes/header.html
+++ b/main/templates/main/includes/header.html
@@ -8,8 +8,12 @@
               data-dropdown-toggle="user-dropdown"
               data-dropdown-placement="bottom">
         <span class="sr-only">Open user menu</span>
-        <img class="w-12 h-12 rounded-full object-cover"
-             src="{% static "img/profile-photo.jpeg" %}"
+        <img class="w-12 h-12 rounded-full object-cover bg-white"
+             src="{% if user.profile.url %}
+             {{ user.profile.url }}
+             {% else %}
+             {% static 'img/default-profile.png' %}
+             {% endif %}"
              alt="user photo">
       </button>
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
